# tinylm

./: .gitignore  README.md  bpe.py  config.yaml  gpt.py  pyproject.toml  train.py
config/models/: gpt.yaml
docs/tokenizer/: README.md  bpe.py
tinylm/: bpe.py  model.py
tinylm/models/: gpt.py
tinylm/tokenizer/: bpe.py
tinylm/utils/: __init__.py
